--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,8 @@
         "type": "git"
       }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "3.2.x-dev"
