--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/console": "~2.1",
         "symfony/form": "~2.1",
         "symfony/property-access": "~2.3",
-        "ruflin/elastica": "dev-master",
+        "ruflin/elastica": "2.2.x-dev",
         "psr/log": "~1.0"
     },
     "require-dev":{
