--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/console": "~2.1",
         "symfony/form": "~2.1",
         "symfony/property-access": "~2.3",
-        "ruflin/elastica": "dev-master",
+        "ruflin/elastica": ">=0.90.10.0, <2.2-dev",
         "psr/log": "~1.0"
     },
     "require-dev":{
@@ -36,13 +36,6 @@
     "autoload": {
         "psr-4": { "FOS\\ElasticaBundle\\": "" }
     },
-    "repositories": [
-        {
-            "url": "https://github.com/falconavs/Elastica.git",
-            "type": "git"
-        }
-    ],
-    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "3.2.x-dev"
